# articulatory-probing

./: README.md  forced_align.sh  pyproject.toml
notebooks/: ema_benchmark.ipynb  ema_projections.ipynb
phono_features/: en_ap_1hot.npz  en_ap_1hot_phnm.npz  en_ap_no_velum_1hot.npz  en_ap_no_velum_scalar.npz  en_ap_scalar.npz  en_ap_scalar_phnm.npz  en_ipa.npz  en_ipa_phnm.npz  en_phoneme.npz
src/artprob/: benchmark.py  clean_phon_feats.py  criterion.py  dataset.py  ema_dataset.md  inventory.py  label_utterances.py  log.py  model.py  phone_durations.py  test.py  train.py
src/artprob/min_accel/: inf_solver.py  linsys.py  solver.py
src/artprob/utils/: array_utils.py  misc.py  optimal_control.py  tensor_utils.py
